--- a/BibliotecaMusical_Presentacion/src/main/java/presentacion/Album.form
+++ b/BibliotecaMusical_Presentacion/src/main/java/presentacion/Album.form
@@ -353,7 +353,7 @@
                       <Color blue="44" green="3a" red="23" type="rgb"/>
                     </Property>
                     <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                      <Image iconType="3" name="/M/lupa.png"/>
+                      <Image iconType="3" name="/media/lupa.png"/>
                     </Property>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                       <Border info="null"/>
@@ -371,7 +371,7 @@
                   <Color blue="80" green="6b" red="3a" type="rgb"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/M/menu.png"/>
+                  <Image iconType="3" name="/media/menu.png"/>
                 </Property>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="null"/>
